# XMUM-Moodle-Agent

./: .env.example  .gitignore  README.md  XMUM-Moodle-Agent-Standalone-Fixed.spec  XMUM-Moodle-Agent-Standalone.spec  XMUM-Moodle-Agent.spec  XUMU-moodle-downloader.spec  pyproject.toml
.openclaw/: workspace-state.json
docs/superpowers/plans/: 2026-04-30-xmum-moodle-agent.md  2026-05-01-pyside-gui-migration.md  2026-05-01-xmum-moodle-agent-apple-ui.md  2026-05-01-xmum-moodle-agent-modern-ui.md  2026-05-01-xmum-moodle-downloader-modern-ui.md
docs/superpowers/specs/: 2026-04-30-xmum-moodle-agent-design.md  2026-05-01-pyside-gui-migration-design.md  2026-05-01-xmum-moodle-agent-apple-ui-design.md  2026-05-01-xmum-moodle-agent-modern-ui-design.md  2026-05-01-xmum-moodle-downloader-modern-ui-design.md
memory/: 2026-05-01.md
src/xmum_moodle_agent/: __init__.py  agent.py  ai_notes.py  cli.py  config.py  course_filter.py  docx_writer.py  downloader.py  gui.py  gui_actions.py  gui_qt.py  gui_state.py  knowledge.py  models.py  moodle.py  scheduler.py
src/xmum_moodle_downloader/: __init__.py  app.py  cli.py  config.py  files.py  gui.py  gui_assets.py  gui_qt.py  gui_state.py  index.py  models.py  moodle.py  parser.py  scheduler.py
tests/: test_ai_notes.py  test_config.py  test_course_filter.py  test_docx_writer.py  test_gui_actions.py  test_gui_assets.py  test_gui_qt.py  test_gui_state.py  test_index_and_files.py  test_moodle_discovery.py  test_parser.py  test_parser_knowledge.py
