[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xmum-moodle-agent"
version = "0.1.0"
description = "Download XMUM Moodle materials and organize course files."
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
]

[project.scripts]
xmum-moodle-agent = "xmum_moodle_agent.cli:main"
xmum-moodle-agent-gui = "xmum_moodle_agent.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
