[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xmum-moodle-downloader"
version = "0.1.0"
description = "Download XMUM Moodle materials and organize course files."
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
]

[project.scripts]
xmum-moodle-downloader = "xmum_moodle_downloader.cli:main"
xmum-moodle-downloader-gui = "xmum_moodle_downloader.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
